tools/hermes/tests/ui/fail_precondition.rs
/// ```lean
//~^ ERROR: Unclosed ```lean block in documentation
unsafe fn unsafe_op(x: u32) -> u32 { x }
